Fix spacing between nav and network

--- a/app/assets/stylesheets/feed/sidebar.css
+++ b/app/assets/stylesheets/feed/sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-    top: 65px;
+    top: 72px;
     position: sticky;
     flex: 0.2;
     border-radius: 10px;
