--- a/app/assets/stylesheets/network/network.css
+++ b/app/assets/stylesheets/network/network.css
@@ -11,7 +11,7 @@
     display: grid;
     grid-template-columns: 320px 765px;
     column-gap: 20px;
-    margin-top: 25px;
+    margin-top: 20px;
     margin-left: -40px;
 }
 
