--- a/app/assets/stylesheets/widgets/widgets.css
+++ b/app/assets/stylesheets/widgets/widgets.css
@@ -30,7 +30,7 @@
 
 .widgets {
     position: sticky;
-    top: 65px;
+    top: 72px;
     flex: 0.2;
     height: fit-content;
     bottom: 500px;
